--- a/L204/index.html
+++ b/L204/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Lab 2/2</title>
     <link rel="stylesheet" href="style.css">
+    <script src="204.js"></script>
   </head>
   <body>
     <!-- page content -->
